Button added to lista.component for better ux, info modified too

--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,18 @@
 
 <head>
     <meta charset="utf-8">
-    <title>StoreList</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="App para crear listas de negocios y sublistas de articulos.">
+    <meta name="author" content="Eric Corral">
+    <meta property="og:image" content="https://i.imgur.com/sqfzfUs.jpg">
+    <meta property="og:title" content="StoreList 📝">
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
     <link rel="stylesheet" type="text/html" href="styles.css">
     <link rel="stylesheet" href="assets/libs/bootstrap/dist/css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/2bd4ac9b4b.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+    <title>StoreList 📝</title>
 </head>
 
 <body>
@@ -19,7 +23,11 @@
 
     <script src="assets/libs/jquery/dist/jquery.min.js"></script>
     <script src="assets/libs/bootstrap/dist/js/bootstrap.min.js"></script>
+
+     <!-- Robar!? Como pudiste !?, no has aprendido nada del que nos da los sermones en la iglesia ese capitán no sé que!! Vivimos en una sociedad de leyes! Por que crees que alquilo las películas de academia de policía, por diversión??? Pues no!! Yo no oí reír a nadie y tú!!??... solo con ese de los ruidos jeje “blublublu argrrrrrr blasblasblas ahhhhjjjjjj” jejejejajaa… Eh, en que estaba? Ah si! No te robes mi apiKey! -->
+
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDNvXzvlrjQL1tQQ8ZN01m_TWtPlzjGHVE"></script>
+    
 </body>
 
 </html>
